<resources>
	<string name="app_name">Shadowingu</string>
	<string name="no_internet_alert">Sorry.. No internet connection available.</string>
	<string name="failed_request_general">Sorry.. Something went wrong.</string>
	<string name="show_hint">Show Hint</string>
	<string name="description">Description</string>
	<string name="press_to_start_shadowing">Press and hold to start shadowing</string>
	<string name="release_to_stop_shadowing">Release to stop shadowing</string>
	<string name="home">Home</string>
	<string name="play">Play</string>
	<string name="learn">Learn</string>
	<string name="achievements">Achievements</string>
	<string name="shop">Shop</string>
	<string name="leaderbaoard">Leaderboard</string>
	<string name="choose_word">Choose Word</string>
	<string name="your_progress">Your Progress</string>
	<string name="your_progress_desc">You have finished %1$s%% of all learning materials</string>
	<string name="active">Active</string>
	<string name="set_active">Set Active</string>
	<string name="buy">Buy for %1$s</string>
	<string name="start_now">Start Now</string>
	<string name="sign_in_with_google">Sign In with Google</string>
	<string name="lesson_cleared">Lesson Cleared!</string>
	<string name="game_over">Game Over!</string>
	<string name="continue_text">Continue</string>
	<string name="new_record">New Record!</string>
	<string name="not_bad_time">Could be faster!</string>
	<string name="not_bad_score">Could be better!</string>
	<string name="you_finished_on">Finished on:</string>
	<string name="bonus">Bonus:</string>
	<string name="correct">Correct Words:</string>
	<string name="score_point">%1$s/%2$s</string>
	<string name="win_result_title">Well Done!\nKeep Up The Good Work</string>
	<string name="lose_result_title">Don\'t Give Up!\nKeep Learning And Try Again</string>
	<string name="gem_qty">x 1</string>
	<string name="skip">Skip</string>
	<string name="level">Level</string>
	<string name="leaderboard_title">Level %1$s / %2$s</string>
	<string name="not_enough_gem">Sorry. You don\'t have enough gem.\nKeep learning and get more gem!</string>
	<string name="guide_life_points">This is your Life Points.\nIt\'ll be reduced every time you wrongly speak a word.\nBeware! If it\'s run out, it means game over!\nYou can increase your Life Points by choosing different Avatars from the Shop</string>
	<string name="guide_timer">This timer show how long you have played this arena.\nPlay faster and get higher score!</string>
	<string name="guide_word">This is the word you will learn</string>
	<string name="guide_voice">Press Voice button to hear how a word is spoken correctly</string>
	<string name="guide_hint">Press Show Hint to see word description</string>
	<string name="guide_recording">Press and Hold this button to start recording your voice</string>
	<string name="intro_shadowing">Shadowing</string>
	<string name="intro_desc">A technique to learn new vocabularies, listening, and speaking of foreign language</string>
	<string name="intro_how_to_do">How To Do It</string>
	<string name="intro_step_hear">Hear how a word is spoken correctly</string>
	<string name="intro_step_speak">Repeating as close as possible to what you have heared</string>
	<string name="intro_step_repeat">See the description / transcript if you don\'t get it correct and repeat again</string>
	<string name="start_learning">Start Learning!</string>
</resources>
