<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/transparent"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="@dimen/item_padding_normal">

	<TextView
		android:id="@+id/stage_cleared"
		style="@style/Word"
		android:layout_width="wrap_content"
		android:text="@string/lesson_cleared"
		android:textColor="@color/color_primary" />

	<LinearLayout
		android:id="@+id/resultContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/item_margin_small"
		android:background="@color/text_light_4"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:padding="@dimen/item_padding_small">

		<TextView
			android:id="@+id/remark"
			style="@style/SubheadingMedium"
			android:layout_width="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/win_result_title"
			android:textAllCaps="true" />

		<FrameLayout
			android:id="@+id/levelContainer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/item_margin_normal"
			android:background="@drawable/bg_circle">

			<TextView
				android:id="@+id/levelRemark"
				style="@style/SubheadingMedium"
				android:layout_width="wrap_content"
				android:layout_gravity="center"
				android:layout_marginBottom="@dimen/item_margin_extra_large"
				android:text="@string/level"
				android:textColor="@color/text_white" />

			<TextView
				android:id="@+id/level"
				style="@style/WordBig"
				android:layout_width="wrap_content"
				android:layout_gravity="center"
				android:textColor="@color/text_white"
				tools:text="1" />
		</FrameLayout>

		<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="@dimen/icon_list_medium"
			android:layout_marginStart="@dimen/item_margin_huge"
			android:layout_marginTop="@dimen/item_margin_small"
			android:layout_marginEnd="@dimen/item_margin_huge"
			android:indeterminate="false"
			tools:progress="75" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/scoreContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/item_margin_normal"
				android:layout_marginTop="@dimen/item_margin_tiny"
				android:layout_marginEnd="@dimen/item_margin_normal"
				android:orientation="horizontal"
				android:weightSum="1">

				<TextView
					style="@style/SubheadingRegular"
					android:layout_width="0dp"
					android:layout_weight="0.37"
					android:text="@string/correct" />

				<TextView
					android:id="@+id/score"
					style="@style/TitleMedium"
					android:layout_width="0dp"
					android:layout_weight="0.2"
					tools:text="8/10" />

				<TextView
					android:id="@+id/scoreRemark"
					style="@style/SubheadingMedium"
					android:layout_width="0dp"
					android:layout_weight="0.43"
					android:textColor="@color/color_accent"
					android:visibility="visible"
					tools:text="@string/new_record" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/timeContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/item_margin_normal"
				android:layout_marginTop="@dimen/item_margin_small"
				android:layout_marginEnd="@dimen/item_margin_normal"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:weightSum="1">

				<TextView
					style="@style/SubheadingRegular"
					android:layout_width="0dp"
					android:layout_weight="0.37"
					android:text="@string/you_finished_on" />

				<TextView
					android:id="@+id/time"
					style="@style/TitleMedium"
					android:layout_width="0dp"
					android:layout_weight="0.2"
					tools:text="01:55" />

				<TextView
					android:id="@+id/timeRemark"
					style="@style/SubheadingMedium"
					android:layout_width="0dp"
					android:layout_weight="0.43"
					android:textColor="@color/color_accent"
					android:visibility="visible"
					tools:text="@string/new_record" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/gemContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/item_margin_normal"
				android:layout_marginTop="@dimen/item_margin_tiny"
				android:layout_marginEnd="@dimen/item_margin_normal"
				android:orientation="horizontal"
				android:weightSum="1">

				<TextView
					style="@style/SubheadingRegular"
					android:layout_width="0dp"
					android:layout_weight="0.37"
					android:text="@string/bonus" />

				<TextView
					android:id="@+id/gem"
					style="@style/TitleMedium"
					android:layout_width="0dp"
					android:layout_weight="0.63"
					android:drawableStart="@drawable/ic_gem"
					android:drawablePadding="@dimen/item_padding_tiny"
					android:text="@string/gem_qty" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/item_margin_small"
		android:orientation="horizontal">

		<ImageButton
			android:id="@+id/btnContinue"
			android:layout_width="@dimen/avatar_small"
			android:layout_height="@dimen/avatar_small"
			android:background="@drawable/ic_play" />

		<ImageButton
			android:id="@+id/btnReplay"
			android:layout_width="@dimen/avatar_small"
			android:layout_height="@dimen/avatar_small"
			android:layout_marginStart="@dimen/item_margin_normal"
			android:background="@drawable/ic_replay" />
	</LinearLayout>
</LinearLayout>